--- a/oscilador_armónico.ipynb
+++ b/oscilador_armónico.ipynb
@@ -6,7 +6,7 @@
       "name": "oscilador armónico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/vywe36JDfb20nhKxToIL",
+      "authorship_tag": "ABX9TyMTf87a0slFgbhkz5OSdS8X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,13 +62,16 @@
         "\n",
         "w = np.sqrt(k/m) #w es la frecuencia angular\n",
         "\n",
+        "f1\n",
         "\n",
         "plt.plot(t1, f1(A,w,t1))\n",
         "plt.xlabel('tiempo')\n",
         "plt.ylabel('posición', 'x')\n",
-        "plt.show()\n"
+        "plt.show()\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -95,6 +98,45 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dzSSMuSsJkn5",
+        "outputId": "15dbdd73-45d2-4fe5-8347-5eeadc6ec977"
+      },
+      "source": [
+        "#Oscilador armónico simple\n",
+        "#Autor: Marco Antonio Aguilar Cárcamo\n",
+        "#Fecha: 01/09/21\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "T= 2 #periodo\n",
+        "t= 3 #tiempo\n",
+        "A= 5 #amplitud\n",
+        "w =(2*math.pi)/T #w es la frecuencia angular\n",
+        "print ('inserte el delta de cambio')\n",
+        "h= float (input(\"\"))\n",
+        "fx_1 = A*(math.sin(w*t))\n",
+        "fx = (A*(math.sin(w*(t+h))) - A*(math.sin(w*(t))))/h\n",
+        "print ('la velocidad del oscilador es', fx)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "inserte el delta de cambio\n",
+            ".5\n",
+            "la velocidad del oscilador es -10.000000000000004\n"
+          ]
         }
       ]
     }
